refactor user form POST/DELETE
